--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding-left: 100px;
 }
 
-.App button{
+/* .App button{
   font-size: 20px;
   padding: 10px 17px;
   border-radius: 5px;
@@ -14,4 +14,4 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-}
+} */
