--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,6 +1,5 @@
 .input {
     min-width: 700px;
-    /* min-height: 362px; */
     max-width: 700px;
     
    
@@ -8,9 +7,8 @@
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    /* position: rel; */
     border-radius: 10px;
-    box-shadow: black  8px 10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #section-1{
     min-width: 700px;
